--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(bno055
+project(bno055_i2c_ros2
         VERSION 1.0.0
         DESCRIPTION "TODO(tarjei)"
         LANGUAGES CXX
@@ -20,27 +20,27 @@ find_package(diagnostic_msgs REQUIRED)
 
 # Add imu node
 add_executable(
-        bno055_i2c
+        bno055_i2c_ros2
         src/bno055_i2c_driver.cpp
         src/bno055_i2c_node.cpp
         src/watchdog.cpp
 )
 ament_target_dependencies(
-        bno055_i2c
+        bno055_i2c_ros2
         rclcpp
         std_msgs
 	      sensor_msgs
 	      diagnostic_msgs
 )
 target_include_directories(
-        bno055_i2c PRIVATE
+        bno055_i2c_ros2 PRIVATE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
 )
 
 # Install executables
 install(TARGETS
-        bno055_i2c
+        bno055_i2c_ros2
         DESTINATION lib/${PROJECT_NAME}
 )
 
