--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-    <name>bno055</name>
+    <name>bno055_i2c_ros2</name>
     <version>1.0.0</version>
-    <description>I2C driver for a BNO055 IMU.</description>
+    <description>ROS2 I2C driver for a BNO055 IMU.</description>
     <maintainer email="dwight.schrute@dundermifflin.com">dwight</maintainer>
     <license>DunderMifflin</license>
 
